--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,16 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.5",
         "symfony/options-resolver": "~2.8|~3.0"
     },
     "suggest": {
-        "doctrine/mongodb": "use with doctrine mongodb"
+        "doctrine/mongodb": "use with doctrine mongodb",
+        "doctrine/orm": ">= 2.2 use with doctrine orm"
     },
     "require-dev": {
-        "doctrine/mongodb": "~1.3"
+        "doctrine/mongodb": "~1.3",
+        "doctrine/orm": "~2.2"
     },
     "autoload": {
         "psr-4": {
