--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
-        "symfony/options-resolver": "~2.8|~3.0"
+        "php": ">=5.5|^7.0",
+        "symfony/options-resolver": "~2.8|~3.0|~4.0"
     },
     "suggest": {
         "doctrine/mongodb": "use with doctrine mongodb",
