--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.5|^7.0",
-        "symfony/options-resolver": "~2.8|~3.0|~4.0"
+        "symfony/options-resolver": "~2.8|~3.0|~4.0|~5.0"
     },
     "suggest": {
         "doctrine/mongodb": "use with doctrine mongodb",
